// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots SectionBox Custom Title 1`] = `
<div>
  <div
    class="MuiBox-root MuiBox-root"
  >
    <h1>
      custom title
    </h1>
    <div
      class="MuiBox-root MuiBox-root"
    />
  </div>
</div>
`;

exports[`Storyshots SectionBox Header Props 1`] = `
<div>
  <div
    class="MuiBox-root MuiBox-root"
  >
    <div
      class="MuiGrid-root makeStyles-sectionHeader makeStyles-sectionHeader MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-space-between"
    >
      <div
        class="MuiGrid-root MuiGrid-item"
      >
        <div
          class="MuiBox-root MuiBox-root"
        >
          <h1
            class="MuiTypography-root makeStyles-sectionTitle makeStyles-sectionTitle MuiTypography-h1 MuiTypography-noWrap"
          >
            This is a section title with a main style
          </h1>
          <div
            class="MuiBox-root MuiBox-root"
          />
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root MuiBox-root"
    />
  </div>
</div>
`;

exports[`Storyshots SectionBox Titled 1`] = `
<div>
  <div
    class="MuiBox-root MuiBox-root"
  >
    <div
      class="MuiGrid-root makeStyles-sectionHeader makeStyles-sectionHeader MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-space-between"
    >
      <div
        class="MuiGrid-root MuiGrid-item"
      >
        <div
          class="MuiBox-root MuiBox-root"
        >
          <h2
            class="MuiTypography-root makeStyles-sectionTitle makeStyles-sectionTitle MuiTypography-h2 MuiTypography-noWrap"
          >
            This is a section title default
          </h2>
          <div
            class="MuiBox-root MuiBox-root"
          />
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root MuiBox-root"
    />
  </div>
</div>
`;

exports[`Storyshots SectionBox Titled Children 1`] = `
<div>
  <div
    class="MuiBox-root MuiBox-root"
  >
    <div
      class="MuiGrid-root makeStyles-sectionHeader makeStyles-sectionHeader MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-space-between"
    >
      <div
        class="MuiGrid-root MuiGrid-item"
      >
        <div
          class="MuiBox-root MuiBox-root"
        >
          <h2
            class="MuiTypography-root makeStyles-sectionTitle makeStyles-sectionTitle MuiTypography-h2 MuiTypography-noWrap"
          >
            This is a section title
          </h2>
          <div
            class="MuiBox-root MuiBox-root"
          />
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root MuiBox-root"
    >
      <p>
        A child paragraph.
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots SectionBox With Children 1`] = `
<div>
  <div
    class="MuiBox-root MuiBox-root"
  >
    <div
      class="MuiBox-root MuiBox-root"
    >
      <p>
        A child paragraph.
      </p>
    </div>
  </div>
</div>
`;
